@@ -85,13 +85,11 @@
                   <type>jar</type>
                   <classifier>hadoop2</classifier>
                 </artifact>
-                <!-- TODO(KIJIMR-177): Enable hadoop1x build artifact attachment.
                 <artifact>
                   <file>../mr-hadoop1x/target/kiji-mapreduce-hadoop1-${project.version}.jar</file>
                   <type>jar</type>
                   <classifier>hadoop1</classifier>
                 </artifact>
-              -->
               </artifacts>
             </configuration>
           </execution>
